environments/staging/centralus/apps/istio/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-route
  namespace: default
spec:
  hosts:
  - helloworld.com
  gateways:
  - public-gateway.istio-system.svc.cluster.local
  http:
  - route:
    - destination:
        port:
          number: 9898
        host: helloworld
