environments/staging/centralus/apps/istio/weighted_virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: weighted-helloworld-route
  namespace: default
spec:
  hosts:
  - helloworld.com
  http:
  - route:
    - destination:
        port:
          number: 9898
        host: helloworld
        subset: v1
      weight: 50
    - destination:
        port:
          number: 9898
        host: helloworld
        subset: v2
      weight: 50
